--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <button id="ac" class="operator">AC</button>
     <button id="de" class="operator">DE</button>
     <button id="." class="operator">,</button>
-    <button id="÷" class="operator">÷</button>
+    <button id="÷" class="operator opM">÷</button>
     <br>
     <button id="7">7</button>
     <button id="8">8</button>
     <button id="9">9</button>
-    <button id="x" class="operator">x</button>
+    <button id="x" class="operator opM">x</button>
     <br>
     <button id="4">4</button>
     <button id="5">5</button>
     <button id="6">6</button>
-    <button id="-" class="operator">-</button>
+    <button id="-" class="operator opM">-</button>
     <br>
     <button id="1">1</button>
     <button id="2">2</button>
     <button id="3">3</button>
-    <button id="+" class="operator">+</button>
+    <button id="+" class="operator opM">+</button>
     <br>
     <button id="00">00</button>
     <button id="0">0</button>
     <button id="=" class="equal operator">=</button>
     <button id="!" class="operator">!</button>
-    <button id="²" class="operator">x<sup>2</sup></button>
+    <button id="²" class="operator opM">x<sup>2</sup></button>
     <button id="√" class="operator">&radic;</button>
     <button id="%of" class="operator">%</button>
   </div>
