--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
     <button id="00">00</button>
     <button id="0">0</button>
     <button id="=" class="equal operator">=</button>
-    <button id="!" class="operator">!</button>
-    <button id="²" class="operator opM">x<sup>2</sup></button>
-    <button id="√" class="operator">&radic;</button>
-    <button id="%of" class="operator">%</button>
+    <button id="!" class="func">!</button>
+    <br>
+    <button id="²" class="func opM">x<sup>2</sup></button>
+    <button id="√" class="func">&radic;</button>
+    <button id="%of" class="func">%</button>
+    <button id="π" class="func pi">&pi;</button>
   </div>
   <script src="app.js"></script>
 </body>
